Fix homepage URL casing in package.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://GertieRabon.github.io/Page",
+  "homepage": "https://gertierabon.github.io/Page",
   "name": "dsclinic",
   "version": "0.1.0",
   "private": true,
